--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "autoload": {
         "psr-4": {
             "Potogan\\RESTBundle\\": "src"
-        },
-        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
+        }
     },
     "require": {
         "php": ">=5.5.9",
+        "symfony/framework-bundle": "",
         "php-http/message": "^1.6",
         "php-http/socket-client": "^1.4",
         "ralfmaxxx/guzzle-psr7-http-message-factory": "^1.0"
