--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,15 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "http://satis.potogan.potogan.com/"
+            "url": "https://satis.potogan.potogan.com/"
         }
     ],
     "require": {
         "php": ">=5.5.9",
-        "symfony/framework-bundle": "^1.0",
+        "symfony/framework-bundle": "*",
         "php-http/message": "^1.6",
         "php-http/socket-client": "^1.4",
-        "ralfmaxxx/guzzle-psr7-http-message-factory": "^1.0"
+        "ralfmaxxx/guzzle-psr7-http-message-factory": "^1.0",
+        "potogan/rest": "dev-master"
     }
 }
