--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,10 @@
         "symfony/framework-bundle": "*",
         "potogan/rest": "^1.0",
         "php-http/client-implementation": "^1.0"
+    },
+    "suggests": {
+        "php-http/message": "^1.6",
+        "ralfmaxxx/guzzle-psr7-http-message-factory": "^1.0",
+        "php-http/socket-client": "^1.4"
     }
 }
