--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "symfony/framework-bundle": "*",
+        "symfony/framework-bundle": "^3.4",
         "potogan/rest": "^1.0",
         "php-http/client-implementation": "^1.0"
     },
